kubernetes/apps/prometheus/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: prometheus

spec:
  selector:
    app: prometheus

  ports:
    - port: 9090
      targetPort: 9090
